--- a/css/style.scss
+++ b/css/style.scss
@@ -308,6 +308,7 @@ h6 {
         &--number,
         &--number-invisible {
             flex: 0 0 5%;
+            max-width: 5%;
             background-color: #f8b0b5;
             text-align: center;
             color: #3b4d57;
