--- a/css/style.scss
+++ b/css/style.scss
@@ -26,6 +26,7 @@ a:active {
     color: #1b61ad;
 }
 
+
 nav,
 footer,
 header,
@@ -67,7 +68,7 @@ a:visited {
 }
 
 a:hover {
-    text-decoration: none;
+    text-decoration: underline;
 }
 
 ul li {
