--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,8 @@ h6 {
   max-width: 100%;
   min-width: 350px;
   min-height: 100vh;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   background-image: -webkit-gradient(linear, left bottom, right top, from(#cae1ee), color-stop(#cbd7f2), color-stop(#dacaec), color-stop(#eebbd7), to(#f8b0b5));
   background-image: linear-gradient(to right top, #cae1ee, #cbd7f2, #dacaec, #eebbd7, #f8b0b5);
 }
