--- a/css/style.css
+++ b/css/style.css
@@ -421,6 +421,17 @@ h6 {
   }
 }
 
+@media screen and (orientation: landscape) {
+  .day__title {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0px;
+    z-index: 100;
+    height: 200px;
+    line-height: 260px;
+  }
+}
+
 .day__content {
   padding: 20px;
   background-color: #3b4d57;
@@ -527,6 +538,18 @@ h6 {
     max-width: 100%;
     margin: 10px 0;
     font-size: 36px;
+  }
+}
+
+@media (orientation: landscape) and (max-device-width: 767px) {
+  .day__content-item {
+    width: 100%;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 100%;
+            flex: 1 0 100%;
+    max-width: 100%;
+    margin: 10px 0;
+    font-size: 20px;
   }
 }
 
