--- a/css/style.scss
+++ b/css/style.scss
@@ -329,6 +329,13 @@ $back-color-item: #c8d7de;
             top: 0px;
             z-index: 100;
         }
+        @media screen and (orientation: landscape) {
+            position: sticky;
+            top: 0px;
+            z-index: 100;
+            height: 200px;
+            line-height: 260px;
+        }
     }
     &__content {
         padding: 20px;
@@ -394,6 +401,13 @@ $back-color-item: #c8d7de;
             max-width: 100%;
             margin: 10px 0;
             font-size: 36px;
+        }
+        @media (orientation: landscape) and ($md3) {
+            width: 100%;
+            flex: 1 0 100%;
+            max-width: 100%;
+            margin: 10px 0;
+            font-size: 20px;
         }
         &--number,
         &--number-invisible {
