--- a/css/style.css
+++ b/css/style.css
@@ -310,7 +310,7 @@ h6 {
 }
 
 .class-ask__content {
-  background-color: #3b4d57;
+  background-color: #343f64;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
