--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ h6 {
 
 .header__content {
   width: 100%;
-  background-color: #3b4d57;
+  background-color: #343F64;
   height: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -310,7 +310,7 @@ h6 {
 }
 
 .class-ask__content {
-  background-color: #343f64;
+  background-color: #343F64;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -333,7 +333,7 @@ h6 {
           flex: 0 0 150px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  color: #3b4d57;
+  color: #343F64;
   height: 55px;
   background-color: #c8d7de;
   font-size: 32px;
@@ -386,7 +386,7 @@ h6 {
   color: #f8b0b5;
   width: 90%;
   margin: 0 auto;
-  background-color: #3b4d57;
+  background-color: #343f64;
 }
 
 .timetable__day {
@@ -405,7 +405,7 @@ h6 {
   line-height: 270px;
   font-size: 50px;
   font-family: 'Pacifico', cursive;
-  color: #3b4d57;
+  color: #343F64;
   position: -webkit-sticky;
   position: sticky;
   top: -50px;
@@ -434,7 +434,7 @@ h6 {
 
 .day__content {
   padding: 20px;
-  background-color: #3b4d57;
+  background-color: #343F64;
 }
 
 .day__content-title, .day__content-lessons, .day__content-lessons-info {
@@ -514,7 +514,7 @@ h6 {
   max-width: calc((100% - 10px * 5) / 5);
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  color: #3b4d57;
+  color: #343F64;
   min-height: 40px;
   background-color: #c8d7de;
   text-align: center;
@@ -560,7 +560,7 @@ h6 {
   max-width: 5%;
   background-color: #f8b0b5;
   text-align: center;
-  color: #3b4d57;
+  color: #343F64;
   font-size: 40px;
   line-height: 46px;
   font-family: 'Pacifico', cursive;
