--- a/css/style.css
+++ b/css/style.css
@@ -504,6 +504,7 @@ h6 {
   color: #fff;
   text-align: left;
   font-size: 24px;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .day__content-item {
