--- a/css/style.css
+++ b/css/style.css
@@ -304,9 +304,9 @@ h6 {
 .class-ask__title {
   text-align: center;
   line-height: 170px;
-  font-size: 60px;
+  font-size: 42px;
   font-family: 'Montserrat', sans-serif;
-  color: #3b4d57;
+  color: #343F64;
 }
 
 .class-ask__content {
